@@ -1,6 +1,14 @@
 # ChangeLog for virtual/xmwde
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*xmwde-0_p20140120 (20 Jan 2014)
+
+  20 Jan 2014; Michael Weber <xmw@gentoo.org> +xmwde-0_p20140120.ebuild,
+  -xmwde-0_p20120510-r1.ebuild, -xmwde-0_p20120918.ebuild,
+  -xmwde-0_p20120919-r1.ebuild, -xmwde-0_p20120919.ebuild,
+  -xmwde-0_p20131206.ebuild:
+  google-chrome, urxvt
 
 *xmwde-0_p20131206 (06 Dec 2013)
 
